# pych9329

./: README.md  mkdocs.yml  noxfile.py  pyproject.toml
docs/: adr.md  index.md  installation.md
docs/adr/: 0000-adr-template.md  0001-state-based-api-design.md  0002-adopt-pydantic-for-data-models.md  0003-adopt-evdev-as-domain-model.md
docs/api/: adapter.md  driver.md  index.md  models.md  protocol.md
e2e_utils/: pyproject.toml
e2e_utils/src/e2e_utils/: __init__.py
src/pych9329/: __init__.py  adapter.py  driver.py  evdev_mapping.py  exceptions.py  models.py  protocol.py  recorder.py
tests/: __init__.py  test_adapter.py  test_driver.py  test_models.py  test_protocol.py  test_pych9329.py  test_recorder.py
tests/e2e/: conftest.py  test_e2e.py  test_keyboard_e2e.py  test_mixed_e2e.py  test_mouse_e2e.py
